// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CourseEnrollments /> renders correctly calls getCourseEnrollments prop 1`] = `<div />`;

exports[`<CourseEnrollments /> renders correctly with empty enrollment data 1`] = `
<div>
  <div
    className="alert fade alert-warning show"
    hidden={false}
    role="alert"
  >
    <div
      className="alert-dialog"
    >
      <div
        className="d-flex"
      >
        <div
          className="icon mr-2"
        >
          <div>
            <span
              aria-hidden={true}
              className="fa fa-exclamation-circle"
              id="Icon1"
            />
          </div>
        </div>
        <div
          className="message"
        >
          <span>
            There are no course enrollments.
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CourseEnrollments /> renders correctly with enrollment data 1`] = `
<div>
  <div
    className={null}
  >
    <div
      className="row"
    >
      <div
        className="col"
      >
        <div
          className="table-responsive"
        >
          <table
            className="table table-sm table-striped"
          >
            <thead
              className=""
            >
              <tr
                className=""
              >
                <th
                  className="sortable"
                  scope="col"
                >
                  <button
                    className="btn btn-header"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    <span>
                      Email
                      <span
                        className="sr-only"
                      >
                         
                        sort ascending
                      </span>
                       
                      <span
                        aria-hidden={true}
                        className="fa fa-sort-asc"
                      />
                    </span>
                  </button>
                </th>
                <th
                  className="sortable"
                  scope="col"
                >
                  <button
                    className="btn btn-header"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    <span>
                      Course Title
                      <span
                        className="sr-only"
                      >
                         
                        click to sort
                      </span>
                       
                      <span
                        aria-hidden={true}
                        className="fa fa-sort"
                      />
                    </span>
                  </button>
                </th>
                <th
                  className="sortable"
                  scope="col"
                >
                  <button
                    className="btn btn-header"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    <span>
                      Enrollment Date
                      <span
                        className="sr-only"
                      >
                         
                        click to sort
                      </span>
                       
                      <span
                        aria-hidden={true}
                        className="fa fa-sort"
                      />
                    </span>
                  </button>
                </th>
                <th
                  className="sortable"
                  scope="col"
                >
                  <button
                    className="btn btn-header"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    <span>
                      Passed Date
                      <span
                        className="sr-only"
                      >
                         
                        click to sort
                      </span>
                       
                      <span
                        aria-hidden={true}
                        className="fa fa-sort"
                      />
                    </span>
                  </button>
                </th>
                <th
                  className="sortable"
                  scope="col"
                >
                  <button
                    className="btn btn-header"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    <span>
                      Enrollment Mode
                      <span
                        className="sr-only"
                      >
                         
                        click to sort
                      </span>
                       
                      <span
                        aria-hidden={true}
                        className="fa fa-sort"
                      />
                    </span>
                  </button>
                </th>
                <th
                  className="sortable"
                  scope="col"
                >
                  <button
                    className="btn btn-header"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    <span>
                      Course Price
                      <span
                        className="sr-only"
                      >
                         
                        click to sort
                      </span>
                       
                      <span
                        aria-hidden={true}
                        className="fa fa-sort"
                      />
                    </span>
                  </button>
                </th>
                <th
                  className="sortable"
                  scope="col"
                >
                  <button
                    className="btn btn-header"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    <span>
                      Coupon Name
                      <span
                        className="sr-only"
                      >
                         
                        click to sort
                      </span>
                       
                      <span
                        aria-hidden={true}
                        className="fa fa-sort"
                      />
                    </span>
                  </button>
                </th>
                <th
                  className="sortable"
                  scope="col"
                >
                  <button
                    className="btn btn-header"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    type="button"
                  >
                    <span>
                      Enterprise Offers
                      <span
                        className="sr-only"
                      >
                         
                        click to sort
                      </span>
                       
                      <span
                        aria-hidden={true}
                        className="fa fa-sort"
                      />
                    </span>
                  </button>
                </th>
              </tr>
            </thead>
            <tbody
              className=""
            >
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  May 9, 2017
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  Has not passed
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  May 9, 2017
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  May 9, 2017
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  May 9, 2017
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  May 9, 2017
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  May 9, 2017
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  May 9, 2017
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  May 9, 2017
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  May 9, 2017
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  May 9, 2017
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  May 9, 2017
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  May 9, 2017
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  May 9, 2017
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  May 9, 2017
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  May 9, 2017
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  May 9, 2017
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  May 9, 2017
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  May 9, 2017
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  May 9, 2017
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  May 9, 2017
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  May 9, 2017
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  May 9, 2017
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  May 9, 2017
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  May 9, 2017
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  May 9, 2017
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  May 9, 2017
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  May 9, 2017
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  May 9, 2017
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
              <tr
                className=""
              >
                <td
                  className=""
                >
                  test@example.com
                </td>
                <td
                  className=""
                >
                  All about acceptance testing!
                </td>
                <td
                  className=""
                >
                  June 27, 2014
                </td>
                <td
                  className=""
                >
                  May 9, 2017
                </td>
                <td
                  className=""
                >
                  verified
                </td>
                <td
                  className=""
                >
                  $200
                </td>
                <td
                  className=""
                >
                  Enterprise Entitlement Coupon
                </td>
                <td
                  className=""
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <div
      className="row mt-2"
    >
      <div
        className="col d-flex justify-content-center"
      >
        <nav
          aria-label="course enrollments pagination"
          className=""
        >
          <div
            aria-atomic={true}
            aria-live="polite"
            aria-relevant="text"
            className="sr-only"
          >
            Page 1, Current Page, of 2
          </div>
          <ul
            className="pagination"
          >
            <li
              className="page-item disabled"
            >
              <button
                aria-label="Previous"
                className="btn previous page-link"
                disabled={true}
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                tabIndex="-1"
                type="button"
              >
                <div>
                  <div>
                    <span
                      aria-hidden={true}
                      className="fa fa-chevron-left mr-2"
                      id="pagination-2"
                    />
                  </div>
                  Previous
                </div>
              </button>
            </li>
            <li
              className="page-item"
            >
              <button
                aria-label="Next, Page 2"
                className="btn next page-link"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onKeyDown={[Function]}
                tabIndex={undefined}
                type="button"
              >
                <div>
                  Next
                  <div>
                    <span
                      aria-hidden={true}
                      className="fa fa-chevron-right ml-2"
                      id="pagination-3"
                    />
                  </div>
                </div>
              </button>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CourseEnrollments /> renders correctly with error state 1`] = `
<div>
  <div
    className="alert fade alert-danger show"
    hidden={false}
    role="alert"
  >
    <div
      className="alert-dialog"
    >
      <div
        className="d-flex"
      >
        <div
          className="icon mr-2"
        >
          <div>
            <span
              aria-hidden={true}
              className="fa fa-times-circle"
              id="Icon1"
            />
          </div>
        </div>
        <div
          className="message"
        >
          <span
            className="title"
          >
            Unable to load full report
          </span>
          <span>
            Try refreshing your screen (Network Error)
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CourseEnrollments /> renders correctly with loading state 1`] = `
<div>
  <div
    className="course-enrollments loading d-flex align-items-center justify-content-center"
  >
    <span>
      Loading...
    </span>
  </div>
</div>
`;
